# AskTheBook

./: .gitignore  animation.py  app.py  build_index.py  constants.py  llm.py  pyproject.toml  rag_qa.py  readme.md  requirements.txt  vector_store.py
